--- a/fixed.html
+++ b/fixed.html
@@ -1,17 +1,19 @@
-<html><head></head>
+<html>
+<head>
+  <title>Javascript Corrections</title>	
+</head>
 
 <body>
 <h1>JavaScript Mistakes Correction</h1>
 
-<script type="text/javascript">
-	var name=Jack;
-	document.rite('<h1>Hello, 'namee"!<h1>")
 
-	if (name="Roger")
-		document.write('You are Roger");
-	else
-		document.write('You are not Roger');
-<script>
+
+	
+
+    <script 
+	<input type="text">
+	
+   </script>
 
 </body>
-</html></script></body></html>
+</html>
