--- a/fixed.html
+++ b/fixed.html
@@ -7,11 +7,13 @@
 <h1>JavaScript Mistakes Correction</h1>
 
 
-
+	
+<input type="text" id="jack">
 	
 
     <script 
-	<input type="text">
+	var jack = document.getElementByid("jack");
+	alert ("Kept you waiting huh?");
 	
    </script>
 
