--- a/fixed.html
+++ b/fixed.html
@@ -11,7 +11,7 @@
 <input type="text" id="jack">
 	
 
-    <script 
+    <script> 
 	var jack = document.getElementByid("jack");
 	alert ("Kept you waiting huh?");
 	
