--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
 	 <hr>
     <input type="text" id="jack">
+    <input type="button" value="please click on me" onclick="myFunction">	
 	
 
     <script> 
-	var jack = document.getElementByid("jack");
-	alert ("Kept you waiting huh?");
+
+	    function myFunction ()
+	    (
+                alert ("Kept you waiting huh?")
+	    ) 	    
+
 	
    </script>
 
