--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 
 	 <hr>
-    <input type="text" id="jack">
-    <input type="button" value="please click on me" onclick="myFunction">	
+    <input type="text">
+    <input type="button" value="please click on me" onclick="myFunction()">	
 	
 
     <script> 
