--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
 
 
 	 <hr>
-    <input type="text">
-    <input type="button" value="please click on me" onclick="myFunction()">	
+    <input type="text" id="uncleroger">
+    <input type="button" value="please click on me" onclick="alert ("kept you waiting huh?">	
 	
 
     <script> 
 
-	    function myFunction ()
-	    (
-                alert ("Kept you waiting huh?")
-	    ) 	    
-
+	
+               alert ("Kept you waiting huh?")
+	    
 	
    </script>
 
