--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script> 
 
 	
-               alert ("Kept you waiting huh?")
+               alert ("Welcome to tbe Page")
 	    
 	
    </script>
