--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 
 	 <hr>
-    <input type="text" id="uncleroger">
-    <input type="button" value="please click on me" onclick="alert ("kept you waiting huh?">	
+    <input type="text">
+    <input type="button" value="please click on me" onclick="alert ("kept you waiting huh?")">	
 	
 
     <script> 
