--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 
 	 <hr>
     <input type="text">
-    <input type="button" value="please click on me" onclick="alert ("kept you waiting huh?")">	
+    <input type="button" value="please click on me" onclick="myFunction()">	
 	
 
     <script> 
 
 	
                alert ("Welcome to tbe Page")
+
+	    function myFunction ()
+		    (
+                      alert ("kept you waiting huh?");
+	            ) 		    
 	    
 	
    </script>
