--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	 <hr>
     <input type="text">
-    <input type="button" value="please click on me" onclick="myFunction()">	
+    <input type="button" value="please click on me">	
 	
 
     <script> 
@@ -19,11 +19,7 @@
 	
                
 
-	    function myFunction()
-		    (
-                      alert ("kept you waiting huh?");
-	            ) 		    
-	    
+	alert ("Welcome to tbe Page");
 	
    </script>
 
